# PGK-p7

./: CMakeLists.txt  N47E017.hgt  README.md  b0e0.hgt  cfs.fragmentshader  definicje.h  implementacje.cpp  main.cpp  p6  p7  stb_image.h  texture.dds  tvs.vertexshader  tvs2.vertexshader
gli/: Makefile  cmake_install.cmake  gli
